# ROGL_old

./: .gitignore  CMakeLists.txt  main.cpp  readme.txt  zmenyNaPC.txt
Assets/: Models  Textures
Assets/Models/OwnCube/: Cube.gltf  Cube.mtl  Cubes.mtl  OwnCube.7z  imgui.ini
Assets/Models/Shrek/: Shrek_mod.fbx  Shrek_mod.gltf  imgui.ini
Assets/Models/Skybox/: zdrojObr.txt
Assets/Shaders/01_SimpleTexture/: 1.model_loading.fs
Assets/Shaders/2D/: cell.frag  cell.vert
Assets/Shaders/Basic/: basic.frag  basic.vert  skybox.frag
Assets/Shaders/Basic/ShadowMap/: meshShadow.vert
Assets/Shaders/Deferred/: debug_fbo.frag  deferred_shading.frag
Assets/Shaders/Deferred/SSAO/: ssao.frag  ssao_blur.frag  ssao_geometry.frag  ssao_geometry.vert  ssao_lighting.frag  ssao_lightingOFF.frag
Assets/Shaders/Experimental/: glint_De.frag  glint_De.vert  glint_WH.frag  glint_WH.vert  glint_ZK.frag  glint_ch.frag  glint_ch.vert
Assets/Shaders/Forward/: skybox.vert  stencil.frag  stencil.vert
Assets/Shaders/Forward/01_SimpleTexture/: 1.model_loading.fs
Assets/Shaders/Forward/MultipleLights/: forwardMultiple.frag  mesh.frag  s_light.frag
Assets/Shaders/Forward/ShadowMap/: ShadowMapDepth.frag  ShadowMapDepth.vert  meshShadow.frag  meshShadow.vert
Assets/Shaders/Forward/Transparent/: transparentGrass.frag
Assets/Shaders/Forward/Water/: water.frag  water.vert
Assets/Shaders/Materials/: basicMat.cpp
Assets/Shaders/MultipleLights/: forwardMultiple.frag  mesh.vert
Assets/Shaders/SSAO/: ssao.frag  ssao_geometry.frag  ssao_geometry.vert  ssao_lighting.frag  ssao_lightingOFF.frag
Assets/Shaders/ShaderInstance/: ShaderClass.cpp
Assets/Shaders/Transparent/: transparentGrass.frag
Assets/Textures/: glints1.tga
Docs/: workingASSIMPstatic.rtf
Source/: CMakeLists.txt  Log.cpp  Log.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  test.cpp  test.h
Source/Camera/: Camera.cpp  Camera.h
Source/Instances/: ObjectInstance.cpp  ObjectInstance.h  SceneInstance.cpp  SceneInstance.h  ShaderInstance.cpp  ShaderInstance.h
Source/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp
Source/Primitives/: Cube.cpp  Cube.h  DefaultCube.cpp  DefaultCube.h  Grass.cpp  Grass.h  Path.cpp  Path.h  Quad.cpp  Quad.h  Water.cpp  Water.h
Source/Primitives/2D/: Plane.cpp  Plane.h
Source/Scenes/: CannonGame.cpp  CannonGame.h  DeferredScene1.cpp  DeferredScene1.h  DeferredScene2.cpp  DeferredScene2.h  ForwardScene1.cpp  ForwardScene1.h  GameScene.cpp  GameScene.h  PlanetGame.cpp  PlanetGame.h  PoolGame.cpp  PoolGame.h
Source/Scenes/SalanciGames/: CannonGame.cpp  CannonGame.h  CoinMapGame.cpp  CoinMapGame.h  GameScene.cpp  GameScene.h  Pathfinding.cpp  Pathfinding.h  PlanetGame.cpp  PlanetGame.h  PoolGame.cpp  PoolGame.h
Source/Utilities/: Controls.cpp  Controls.h  GraphicsOptions.cpp  GraphicsOptions.h  Managers.cpp  Managers.h  PerfAnalyzer.cpp  PerfAnalyzer.h
cmake/modules/: Findassimp.cmake
includes/: stb_image.h  stb_image_write.h  tinyexr.h
includes/FileDialog/: CMakeLists.txt  FileDialog.cpp  FileDialog.h
